# fastapi-odmantic-example

./: README.md  pyproject.toml
app/: main.py  settings.py
app/api/: routes.py
app/api/v1/: auth.py  users.py
app/cmd/: run.py
app/core/: db.py  depends.py  security.py
app/schemas/: users.py
